# leo3

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LEAN_INLINE_FUNCTIONS.md  README.md  TESTING.md  justfile  test-features.sh
.github/workflows/: cache-cleanup.yml  ci.yml  coverage-pr-base.yml  release.yml  security.yml  test.yml
docs/: architecture.md  contracts.md  contributing.md  leo3-maturity-spec.md  phase-1-public-api-honesty.md  phase-2-runtime-threading.md  phase-3-error-boundaries.md  phase-4-module-surface.md  phase-5-leanclass-semantics.md  phase-6-7-boundary-contract.md  pyo3-alignment.md  remaining-work-checklist.md
examples/: leanclass_demo.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
leantests/: Cargo.toml  README.md  build.rs
leantests/lean/: Basic.lean
leantests/tests/: lean_integration.rs
leo3/: Cargo.toml  build.rs
leo3-binding-ir/: Cargo.toml
leo3-binding-ir/src/: lib.rs
leo3-build-config/: Cargo.toml  build.rs
leo3-build-config/src/: errors.rs  impl_.rs  lib.rs
leo3-ffi/: Cargo.toml  build.rs
leo3-ffi-check/: Cargo.toml  README.md  build.rs
leo3-ffi-check/src/: lib.rs
leo3-ffi-check/tests/: ffi_layout.rs
leo3-ffi/src/: array.rs  closure.rs  constructors.rs  environment.rs  expr.rs  float.rs  hashmap.rs  hashset.rs  inline.rs  int.rs  io.rs  lib.rs  meta.rs  name.rs  nat.rs  object.rs  rbmap.rs  string.rs
leo3-ffi/src/inline/: array.rs  closure.rs  external.rs  layout.rs  nat.rs  numeric.rs  object.rs  string.rs  task.rs  utils.rs
leo3-ffi/tests/: meta_symbols.rs  nat_overflow_test.rs
leo3-macros/: Cargo.toml
leo3-macros-backend/: Cargo.toml
leo3-macros-backend/src/: conversion_plan.rs  derive.rs  lean_instance.rs  leanclass.rs  leanfn.rs  lib.rs  surface.rs
leo3-macros-backend/src/derive/: common.rs  from_lean.rs  into_lean.rs
leo3-macros/src/: lib.rs
leo3/benches/: array_conversion.rs  int_ops_big.rs  int_ops_small.rs
leo3/examples/: async_task_promise.rs  io_monad.rs  leanmodule_export.rs  macro_pipeline.rs  proof_construction.rs  smart_conversion.rs
leo3/src/: closure.rs  conversion.rs  err.rs  external.rs  instance.rs  lib.rs  marker.rs  module.rs  promise.rs  runtime.rs  sync.rs  task.rs  task_combinators.rs  thunk.rs  tokio_bridge.rs  unbound.rs
leo3/src/io/: console.rs  env.rs  error.rs  fs.rs  handle.rs  mod.rs  process.rs  time.rs
leo3/src/meta/: context.rs  declaration.rs  environment.rs  expr.rs  level.rs  literal.rs  metam.rs  mod.rs  name.rs  tactic.rs
leo3/src/types/: array.rs  bitvec.rs  bool.rs  bytearray.rs  char.rs  empty.rs  except.rs  fin.rs  float.rs  float32.rs  int.rs  list.rs  mod.rs  nat.rs  option.rs  prod.rs  range.rs  sigma.rs  sint.rs  string.rs  subtype.rs  sum.rs  uint.rs
leo3/src/types/containers/: README.md  hashmap.rs  hashset.rs  mod.rs  rbmap.rs  symbols.rs
leo3/tests/: array_ops.rs  basic.rs  bool_ops.rs  container_family_parity.rs  container_key_matrix_ops.rs  float32_test.rs  hash_containers_ops.rs  hashset_nat_ops.rs  hashset_string_ops.rs  high_priority_types.rs  int_api_test.rs  int_ops.rs  int_ops_comprehensive.rs  io_ops.rs  list_ops.rs  meta_basic.rs  meta_comprehensive.rs  meta_eio_error.rs  module_loading.rs  nat_ops.rs  new_type_conversions.rs  option_ops.rs  other_types.rs  prod_ops.rs  rbmap_ops.rs  rbmap_string_ops.rs  string_ops.rs  test_binding_metadata.rs  test_borrowed.rs  test_closure.rs  test_compile_error.rs  test_conversion.rs  test_conversion_macros.rs  test_derive_macros.rs  test_eq_proofs.rs  test_error_boundaries.rs  test_features.rs  test_gc.rs  test_hash_minimal.rs  test_infer_type.rs  (+27 more)
leo3/tests/fixtures/leanmodule_runtime_fixture/: Cargo.toml  build.rs
leo3/tests/fixtures/leanmodule_runtime_fixture/src/: lib.rs
leo3/tests/surface_ui/: default_no_containers.rs  default_no_containers.stderr
leo3/tests/test_utils/: mod.rs
leo3/tests/ui/: invalid_lifetime.rs  invalid_lifetime.stderr  leanclass_generic_impl.rs  leanclass_generic_impl.stderr  leanclass_generic_method.rs  leanclass_generic_method.stderr  leanclass_generic_struct.rs  leanclass_generic_struct.stderr  leanclass_unsupported_generic_type.rs  leanclass_unsupported_generic_type.stderr  leanclass_unsupported_pattern.rs  leanclass_unsupported_pattern.stderr  leanclass_unsupported_ref.rs  leanclass_unsupported_ref.stderr  leanclass_unsupported_tuple_arity.rs  leanclass_unsupported_tuple_arity.stderr  missing_lean_token.rs  missing_lean_token.stderr  type_mismatch.rs  type_mismatch.stderr
