[workspace]
resolver = "2"
members = [
    "leo3",
    "leo3-ffi",
    "leo3-build-config",
    "leo3-macros",
    "leo3-macros-backend",
]
exclude = ["examples", "leo3-ffi-check"]

[workspace.package]
version = "0.1.6"
edition = "2021"
rust-version = "1.88"
authors = ["Leo3 Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AndPuQing/leo3"
repository = "https://github.com/AndPuQing/leo3.git"
documentation = "https://docs.rs/leo3"

[workspace.dependencies]
leo3-ffi = { path = "leo3-ffi", version = "0.1.6" }
leo3-build-config = { path = "leo3-build-config", version = "0.1.6" }
leo3-macros = { path = "leo3-macros", version = "0.1.6" }
leo3-macros-backend = { path = "leo3-macros-backend", version = "0.1.6" }


libc = "0.2"
libloading = "0.9"
criterion = "0.8"

[profile.release]
lto = "thin"
