[package]
name = "leo3-build-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Build-time configuration for Leo3"
keywords = ["lean", "lean4", "build"]
categories = ["development-tools::build-utils"]

[features]
default = []
resolve-config = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
