[package]
name = "leo3-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Raw FFI bindings to the Lean4 C API"
keywords = ["lean", "lean4", "ffi", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]

[dependencies]
libc.workspace = true

[build-dependencies]
leo3-build-config = { workspace = true }
