[package]
name = "leo3-macros-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Implementation detail of Leo3 procedural macros"
keywords = ["lean", "lean4", "macros"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[features]
default = []
