[package]
name = "leo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust bindings for the Lean4 theorem prover"
keywords = ["lean", "lean4", "theorem-prover", "bindings"]
categories = ["api-bindings"]
readme = "../README.md"

[dependencies]
leo3-ffi = { workspace = true }
libc.workspace = true

# Optional macro support
leo3-macros = { workspace = true, optional = true }

[build-dependencies]
leo3-build-config = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["macros"]
macros = ["leo3-macros"]

# Runtime testing feature - enables tests that require Lean4 to be linked
# When disabled, only compile-time tests run
runtime-tests = []

# Future features
# auto-initialize = []
# extension-module = []
