[package]
name = "leo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust bindings for the Lean4 theorem prover"
keywords = ["lean", "lean4", "theorem-prover", "bindings"]
categories = ["api-bindings"]
readme = "../README.md"

[dependencies]
leo3-ffi = { workspace = true }
libc.workspace = true
libloading.workspace = true
paste = "1.0"

# Optional macro support
leo3-macros = { workspace = true, optional = true }

# Optional Tokio integration
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"], optional = true }

[build-dependencies]
leo3-build-config = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
criterion.workspace = true
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

[[bench]]
name = "array_conversion"
harness = false

[[bench]]
name = "int_ops_small"
harness = false

[[bench]]
name = "int_ops_big"
harness = false

[features]
default = ["macros"]
macros = ["leo3-macros"]
tokio = ["dep:tokio"]

# Runtime testing feature - enables tests that require Lean4 to be linked
# When disabled, only compile-time tests run
runtime-tests = []

# Future features
# auto-initialize = []
# extension-module = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
