[package]
name = "leo3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust bindings for the Lean4 theorem prover"
keywords = ["lean", "lean4", "theorem-prover", "bindings"]
categories = ["api-bindings"]
readme = "../README.md"

[dependencies]
leo3-ffi = { workspace = true }
libc.workspace = true
libloading = { workspace = true, optional = true }
paste = "1.0"

# Optional macro support
leo3-macros = { workspace = true, optional = true }

# Optional Tokio integration
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"], optional = true }

[build-dependencies]
leo3-build-config = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
criterion.workspace = true
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

[[bench]]
name = "array_conversion"
harness = false

[[bench]]
name = "int_ops_small"
harness = false

[[bench]]
name = "int_ops_big"
harness = false

[[example]]
name = "io_monad"
required-features = ["io"]

[[example]]
name = "proof_construction"
required-features = ["meta"]

[features]
# Keep the default public surface intentionally minimal.
default = []

# Optional public subsystems.
macros = ["dep:leo3-macros"]
meta = []
io = []
task = []
module-loading = ["dep:libloading"]
tokio = ["dep:tokio", "task"]

# Runtime testing feature - enables tests that require Lean4 to be linked.
# When disabled, runtime-dependent tests are typically ignored.
runtime-tests = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
